--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/cormorant-garamond": "^5.0.8",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "@mui/material-nextjs": "^5.15.9",
     "dotenv": "^16.3.2",
     "next": "14.0.3",
     "openai": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "timers-promises": "^1.0.1",
+    "typeface-raleway": "^1.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
