--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/cormorant-garamond": "^5.0.8",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
     "@mui/material-nextjs": "^5.15.9",
     "dotenv": "^16.3.2",
