--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
     "@mui/material-nextjs": "^5.15.9",
+    "axios": "^1.6.7",
     "dotenv": "^16.3.2",
     "next": "14.0.3",
     "openai": "^4.24.7",
